rename class aboutUsContent

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -989,8 +989,8 @@ transform:scale(1.1);
   height: 85%;
 }
 
-.abouyUsContent {
-  font-size: 18px;
+.aboutUsContent {
+  font-size: 13.5px;
   margin-top: 20px;
   padding-right: 150px;
   padding-left: 150px;
