--- a/views/front/about.hbs
+++ b/views/front/about.hbs
@@ -11,7 +11,7 @@
         </video> --}}
       </div>
       {{!-- <h2 class=" text-center"><b>Ambassador The Custom Shop</b></h2> --}}
-      <p class=" text-center abouyUsContent">
+      <p class=" text-center aboutUsContent">
         <em> Ambassador The Custom Shop brings 47 years of excellence to our clients through top quality, perfectly
           crafted custom made menswear. We give men the style, elegant and trendy looks they deserve. <br /></em>
         The craft of tailoring takes a material and enriches it, adding personality and spirit to enhance your
